--- a/city-register/src/main/webapp/index.html
+++ b/city-register/src/main/webapp/index.html
@@ -1,1 +1,17 @@
-<strong>Hello, world!</strong>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+<H3>Hello, world!</H3>
+
+<a href="checkPerson">Check Person</a>
+
+<form action="checkPerson" method="get">
+    Surname: <input type="text" name="surname" />
+    <input type="submit" value="GO">
+</form>
+</body>
+</html>
